src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__personality_selection_popup.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Select Personality
  Choose a communication style for Adam. Disable in /experimental.

› 1. Friendly (current)  Warm, collaborative, and helpful.
  2. Pragmatic           Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
