src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: src/tui/app/src/chatwidget/tests.rs
assertion_line: 2013
expression: popup
---
  Implement this plan?

  1. Yes, implement this plan      Switch to programmer identity.
› 2. No, stay in planner identity  Continue planning with the model.

  Press enter to confirm or esc to go back
