src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"  Would you like to run the following command?                                                      "
"                                                                                                    "
"  Reason: this is a test reason such as one that would be produced by the model                     "
"                                                                                                    "
"  $ echo 'hello world'                                                                              "
"                                                                                                    "
"› 1. Yes, proceed (y)                                                                               "
"  2. Yes, and don't ask again for commands that start with `echo 'hello world'` (p)                 "
"  3. No, and tell Adam what to do differently (esc)                                                 "
"                                                                                                    "
"  Press enter to confirm or esc to cancel                                                           "
