src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p adam-coding-agent
  └ (waited)

• Streaming response.
